Fix z indexes on mobile devices.

--- a/stylesheets/main.sass
+++ b/stylesheets/main.sass
@@ -37,11 +37,11 @@ a
   .info-button
     cursor: pointer
     width: 70px
-    z-index: 300
+    z-index: 310
     font-size: 18px
     text-align: center
   .expanded
-    z-index: 200
+    z-index: 300
     width: 100%
     max-width: 320px
     padding: 0 30px 0 80px
@@ -76,7 +76,7 @@ a
 
 #time-filters
   position: fixed
-  z-index: 9000
+  z-index: 200
   top: 1%
   right: 0
   li
